<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E2BB"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/name_0"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"
        android:text="@string/rules"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/robot_points_text"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/robot_points_text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/your_points_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/your_points"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/robot_points"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:gravity="center_horizontal"
            android:text="@string/robot_points"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/your_points"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_horizontal"
            android:text="@string/your_points_number"
            android:textSize="36sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/cube_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:text="@string/cubes_text"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/second_cube_points"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_horizontal"
            android:text="@string/second_cube_points"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/first_cube_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text="@string/first_cube_points"
            android:textSize="30sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:background="#4CAF50"
        android:onClick="onClick"
        android:shape="oval"
        android:text="@string/btn_text"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:typeface="normal" />

</LinearLayout>